syntax = "proto3";

package grpc;
option go_package = "grpc/proto";

message Category {
  int32 id = 1;
  string name = 2;
}

message CreateCategoryRequest {
  string name = 1;
}

message UpdateCategoryRequest {
  Category category = 1;
}

message GetCategoryRequest {
  int32 category_id = 1;
}

message GetAllCategoryRequest {}

message GetAllCategoryResponse {
  repeated Category categories = 1;
}

message DeleteCategoryRequest {
  int32 category_id = 1;
}

message DeleteCategoryResponse {
  string message = 1;
}

message CategoryResponse {
  Category category = 1;
}

service CategoryService {
  rpc CreateCategory (CreateCategoryRequest) returns (CategoryResponse);
  rpc UpdateCategory (UpdateCategoryRequest) returns (CategoryResponse);
  rpc GetCategory (GetCategoryRequest) returns (CategoryResponse);
  rpc GetAllCategory (GetAllCategoryRequest) returns (GetAllCategoryResponse);
  rpc DeleteCategory (DeleteCategoryRequest) returns (DeleteCategoryResponse);
}
